--- a/res/layout/setting_item.xml
+++ b/res/layout/setting_item.xml
@@ -3,5 +3,6 @@
     android:id="@+id/settingItem"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp" />
+    android:textSize="20sp"
+    android:padding="10dp" />
     
