--- a/res/layout/title_bar.xml
+++ b/res/layout/title_bar.xml
@@ -42,7 +42,7 @@
             android:layout_height="35dp"
             android:layout_centerHorizontal="true"
             android:contentDescription="@string/chat_list_button"
-            android:src="@drawable/chat_list_button"
+            android:src="@drawable/contact_button"
             android:clickable="true" />
         
     </RelativeLayout>
